# BnD

./: .gitmodules
Native/: CMakeLists.txt  linux_build_option  readme
Native/SampleSDK/: CMakeLists.txt
Native/SampleSDK/SampleBase/: BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  ProductIdentifier.cpp  ProductIdentifier.h  SampleBase.h
Native/SampleSDK/SampleDBClient/: CMakeLists.txt  SampleDBClient.h  SampleMariaDBClient.cpp  SampleMariaDBClient.h  SampleMariaDBResult.cpp  SampleMariaDBResult.h
Native/SampleSDK/SampleData/: CMakeLists.txt  SampleData.h  SampleDataMaker.cpp  SampleDataMaker.h  SampleUserInfo.cpp  SampleUserInfo.h
Native/SampleSDK/SampleMessage/: CMakeLists.txt  SampleMessage.h  SampleMessageAnalyzer.cpp  SampleMessageAnalyzer.h  SampleMessageAnalyzerListener.h  SampleMsgInitializeReq.cpp  SampleMsgInitializeReq.h  SampleMsgInitializeRsp.cpp  SampleMsgInitializeRsp.h
Native/SampleWebService/: CMakeLists.txt
Native/SampleWebService/SWSBase/: BaseSampleWebService.cpp  BaseSampleWebService.h  CMakeLists.txt  SWSBase.h  SampleWebServer.cpp  SampleWebServer.h  SampleWebServerSession.cpp  SampleWebServerSession.h
Native/SampleWebService/SWSIntegrated/: CMakeLists.txt  SWSIntegrated.h  SampleWebService.cpp  SampleWebService.h
Native/SampleWebService/SWSStandard/: CMakeLists.txt  SWSStandard.h  StandardSWSRepository.cpp  StandardSWSRepository.h  StandardSampleWebServer.cpp  StandardSampleWebServer.h  StandardSampleWebServerSession.cpp  StandardSampleWebServerSession.h  StandardSampleWebService.cpp  StandardSampleWebService.h
Native/SampleWebService/SampleWebService/: CMakeLists.txt  main.cpp
Native/_win32/: CMakeLists.txt
Native/_win32/BaseMFC/: BaseMFCDlg.cpp  BaseMFCDlg.h  BaseMFCMainTabCtrlPageStartStop.cpp  BaseMFCMainTabCtrlPageStartStop.h  BaseMFCMainThread.cpp  BaseMFCMainThread.h  BaseMFCTabCtrlWnd.cpp  BaseMFCTabCtrlWnd.h  CMakeLists.txt  mfc_framework.h  pch.h
Native/_win32/GeneralUI/: CMakeLists.txt  ControlOwner.cpp  ControlOwner.h  TabCtrlPage.cpp  TabCtrlPage.h  TabCtrlWnd.cpp  TabCtrlWnd.h  WindowsHelper.h  mfc_framework.h  pch.h
Native/_win32/SampleWebServiceMFC/: CMakeLists.txt  MainTabCtrlPageDev.cpp  MainTabCtrlPageDev.h  PopupInputDlg.cpp  PopupInputDlg.h  Resource.h  SWSMFCDlg.cpp  SWSMFCDlg.h  SWSMFCMain.cpp  SWSMFCMain.h  SWSMFCMain.rc  SWSMainTabCtrlPageStartStop.cpp  SWSMainTabCtrlPageStartStop.h  SWSMainTabCtrlWnd.cpp  SWSMainTabCtrlWnd.h  SWSMainThread.cpp  SWSMainThread.h  SampleWebServiceMFC.cpp  SampleWebServiceMFC.h  StandardSampleWebServicePublic.cpp  StandardSampleWebServicePublic.h  pch.h
Native/_win32/SampleWebServiceMFC/res/: SWSMFCMain.rc2
Native/_win32/SampleWindowService/: CMakeLists.txt  SampleWindowService.cpp  SampleWindowService.h  main.cpp
Native/cmake/: ConvMacros.cmake  DefinePlatformSpecifc.cmake
